// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert button renders the component with props 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 14px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 8px;
  color: #FFFFFF;
  background-color: #EE0505;
  opacity: 1;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border: 1px solid #EE0505;
  border-radius: 8px;
}

.c0:active,
.c0:focus {
  box-shadow: inset 0 0 0 2px #EE0505,inset 0 0 0 4px #FFFFFF;
  outline: inherit;
}

.c0:hover {
  opacity: 0.8;
  color: undefined;
  background-color: undefined;
  box-shadow: none;
}

.c0:active {
  opacity: 0.4;
}

<button
  class="c0"
>
  Alert
</button>
`;

exports[`Compact button renders the component with props 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 6px 16px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 8px;
  color: #FFFFFF;
  background-color: #4A3EDE;
  opacity: 1;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border: 1px solid #4A3EDE;
  border-radius: 8px;
}

.c0:active,
.c0:focus {
  box-shadow: inset 0 0 0 2px #4A3EDE,inset 0 0 0 4px #FFFFFF;
  outline: inherit;
}

.c0:hover {
  opacity: 0.8;
  color: undefined;
  background-color: undefined;
  box-shadow: none;
}

.c0:active {
  opacity: 0.4;
}

<button
  class="c0"
>
  Compact
</button>
`;

exports[`Disabled button renders the component with props 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 14px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 600;
  cursor: not-allowed;
  border: 1px solid transparent;
  border-radius: 8px;
  color: #FFFFFF;
  background-color: #4A3EDE;
  opacity: 0.3;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border: 1px solid #4A3EDE;
  border-radius: 8px;
}

<button
  class="c0"
  disabled=""
>
  Disabled
</button>
`;

exports[`Full width button renders the component with props 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 14px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 8px;
  color: #FFFFFF;
  background-color: #4A3EDE;
  opacity: 1;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border: 1px solid #4A3EDE;
  border-radius: 8px;
}

.c0:active,
.c0:focus {
  box-shadow: inset 0 0 0 2px #4A3EDE,inset 0 0 0 4px #FFFFFF;
  outline: inherit;
}

.c0:hover {
  opacity: 0.8;
  color: undefined;
  background-color: undefined;
  box-shadow: none;
}

.c0:active {
  opacity: 0.4;
}

<button
  class="c0"
>
  Full width
</button>
`;

exports[`Large button renders the component with props 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 14px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 20px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 8px;
  color: #FFFFFF;
  background-color: #4A3EDE;
  opacity: 1;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border: 1px solid #4A3EDE;
  border-radius: 8px;
}

.c0:active,
.c0:focus {
  box-shadow: inset 0 0 0 2px #4A3EDE,inset 0 0 0 4px #FFFFFF;
  outline: inherit;
}

.c0:hover {
  opacity: 0.8;
  color: undefined;
  background-color: undefined;
  box-shadow: none;
}

.c0:active {
  opacity: 0.4;
}

<button
  class="c0"
>
  Large
</button>
`;

exports[`Left icon button renders the component with props 1`] = `
.c1 {
  display: block;
  margin-left: 8px;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 14px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 8px;
  color: #FFFFFF;
  background-color: #4A3EDE;
  opacity: 1;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border: 1px solid #4A3EDE;
  border-radius: 8px;
}

.c0:active,
.c0:focus {
  box-shadow: inset 0 0 0 2px #4A3EDE,inset 0 0 0 4px #FFFFFF;
  outline: inherit;
}

.c0:hover {
  opacity: 0.8;
  color: undefined;
  background-color: undefined;
  box-shadow: none;
}

.c0:active {
  opacity: 0.4;
}

<button
  class="c0"
>
  <div>
    My icon
  </div>
  <span
    class="c1"
  >
    Left icon
  </span>
</button>
`;

exports[`Link button renders the component with props 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 14px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 8px;
  color: #4A3EDE;
  background-color: transparent;
  opacity: 1;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border: 1px solid transparent;
  border-radius: 8px;
}

.c0:active,
.c0:focus {
  box-shadow: undefined;
  outline: none;
}

.c0:hover {
  opacity: 0.8;
  color: undefined;
  background-color: undefined;
  box-shadow: none;
}

.c0:active {
  opacity: 0.4;
}

<button
  class="c0"
>
  Link
</button>
`;

exports[`Link contrast button renders the component with props 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 14px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 8px;
  color: #FFFFFF;
  background-color: transparent;
  opacity: 1;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border: 1px solid transparent;
  border-radius: 8px;
}

.c0:active,
.c0:focus {
  box-shadow: undefined;
  outline: none;
}

.c0:hover {
  opacity: 0.8;
  color: undefined;
  background-color: undefined;
  box-shadow: none;
}

.c0:active {
  opacity: 0.4;
}

<button
  class="c0"
>
  Link contrast
</button>
`;

exports[`Primary button renders the component with props with no a11y violations 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 14px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 8px;
  color: #FFFFFF;
  background-color: #4A3EDE;
  opacity: 1;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border: 1px solid #4A3EDE;
  border-radius: 8px;
}

.c0:active,
.c0:focus {
  box-shadow: inset 0 0 0 2px #4A3EDE,inset 0 0 0 4px #FFFFFF;
  outline: inherit;
}

.c0:hover {
  opacity: 0.8;
  color: undefined;
  background-color: undefined;
  box-shadow: none;
}

.c0:active {
  opacity: 0.4;
}

<button
  class="c0"
>
  Primary
</button>
`;

exports[`Primary contrast button renders the component with props 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 14px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 8px;
  background-color: #FFFFFF;
  opacity: 1;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border: 1px solid #FFFFFF;
  border-radius: 8px;
}

.c0:active,
.c0:focus {
  box-shadow: inset 0 0 0 2px #FFFFFF,inset 0 0 0 4px #4A3EDE;
  outline: inherit;
}

.c0:hover {
  opacity: 0.8;
  color: undefined;
  background-color: undefined;
  box-shadow: none;
}

.c0:active {
  opacity: 0.4;
}

<button
  class="c0"
>
  Primary contrast
</button>
`;

exports[`Right icon button renders the component with props 1`] = `
.c1 {
  display: block;
  margin-right: 8px;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 14px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 8px;
  color: #FFFFFF;
  background-color: #4A3EDE;
  opacity: 1;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border: 1px solid #4A3EDE;
  border-radius: 8px;
}

.c0:active,
.c0:focus {
  box-shadow: inset 0 0 0 2px #4A3EDE,inset 0 0 0 4px #FFFFFF;
  outline: inherit;
}

.c0:hover {
  opacity: 0.8;
  color: undefined;
  background-color: undefined;
  box-shadow: none;
}

.c0:active {
  opacity: 0.4;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Right icon
  </span>
  <div>
    My icon
  </div>
</button>
`;

exports[`Secondary button renders the component with props 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 14px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 8px;
  color: #4A3EDE;
  background-color: transparent;
  opacity: 1;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border: 2px solid #4A3EDE;
  border-radius: 8px;
}

.c0:active,
.c0:focus {
  box-shadow: inset 0 0 0 4px #4A3EDE;
  outline: inherit;
}

.c0:hover {
  opacity: 0.8;
  color: #FFFFFF;
  background-color: #4A3EDE;
  box-shadow: none;
}

.c0:active {
  opacity: 0.4;
}

<button
  class="c0"
>
  Secondary
</button>
`;

exports[`Secondary contrast button renders the component with props 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 14px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 8px;
  color: #FFFFFF;
  background-color: transparent;
  opacity: 1;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border: 2px solid #FFFFFF;
  border-radius: 8px;
}

.c0:active,
.c0:focus {
  box-shadow: inset 0 0 0 2px #FFFFFF;
  outline: inherit;
}

.c0:hover {
  opacity: 0.8;
  color: undefined;
  background-color: transparent;
  box-shadow: inset 0 0 0 2px #FFFFFF;
}

.c0:active {
  opacity: 0.4;
}

<button
  class="c0"
>
  Secondary contrast
</button>
`;

exports[`Small button renders the component with props 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 24px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 8px;
  color: #FFFFFF;
  background-color: #4A3EDE;
  opacity: 1;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border: 1px solid #4A3EDE;
  border-radius: 8px;
}

.c0:active,
.c0:focus {
  box-shadow: inset 0 0 0 2px #4A3EDE,inset 0 0 0 4px #FFFFFF;
  outline: inherit;
}

.c0:hover {
  opacity: 0.8;
  color: undefined;
  background-color: undefined;
  box-shadow: none;
}

.c0:active {
  opacity: 0.4;
}

<button
  class="c0"
>
  Small
</button>
`;

exports[`Warning button renders the component with props 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 14px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 8px;
  color: #0D0A38;
  background-color: #FFB428;
  opacity: 1;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border: 1px solid #FFB428;
  border-radius: 8px;
}

.c0:active,
.c0:focus {
  box-shadow: inset 0 0 0 2px #FFB428,inset 0 0 0 4px #0D0A38;
  outline: inherit;
}

.c0:hover {
  opacity: 0.8;
  color: undefined;
  background-color: undefined;
  box-shadow: none;
}

.c0:active {
  opacity: 0.4;
}

<button
  class="c0"
>
  Warning
</button>
`;
